force-app/main/default/objects/acn_ttn__User_Cleaner_Transaction__c/acn_ttn__User_Cleaner_Transaction__c.object-meta.xml
<CustomObject>
    <label>User Cleaner Transaction</label>
    <nameField>
        <displayFormat>UCT-{0000}</displayFormat>
        <label>User Cleaner Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Cleaner Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>