force-app/main/default/objects/acn_ttn__User_Cleaner_Transaction__c/fields/acn_ttn__No_of_system_admin_user__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__No_of_system_admin_user__c</fullName>
    <label>No of system admin user</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>