force-app/main/default/objects/acn_ttn__User_Cleaner_Transaction__c/fields/acn_ttn__Not_logged_in_270_to_365_days__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Not_logged_in_270_to_365_days__c</fullName>
    <label>Not logged in 270 to 365 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>