force-app/main/default/objects/acn_ttn__User_Cleaner_Transaction__c/fields/acn_ttn__ProcessingStage__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ProcessingStage__c</fullName>
    <label>ProcessingStage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Analysis Started</fullName>
            </value>
            <value>
                <fullName>User Analysis Report Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>